--- a/.github/workflows/deployer.yml
+++ b/.github/workflows/deployer.yml
@@ -8,5 +8,5 @@ jobs:
     steps:
       - name: Deploy the logging service
         run: |
-          echo Making request to deploy.zytekaron.com/website/deploy
-          curl -H "Authorization: ${{ secrets.AUTH }}" https://deploy.zytekaron.com/website/deploy
+          echo Making request to deploy.zytekaron.com/logbyte/deploy
+          curl -H "Authorization: ${{ secrets.AUTH }}" https://deploy.zytekaron.com/logbyte/deploy
